Исправлены некоторые ошибки